fix outdated idioms